--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
     "next": "13.1.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
+    "react-simple-typewriter": "^5.0.1",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
     "eslint": "8.32.0",
-    "eslint-config-next": "13.1.2"
+    "eslint-config-next": "13.1.2",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4"
   }
 }
