--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-simple-typewriter": "^5.0.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "sweetalert": "^2.1.2"
   },
   "devDependencies": {
