agregando proyecto de zoom

--- a/public/jsons/projects.json
+++ b/public/jsons/projects.json
@@ -9,6 +9,15 @@
         "deploy" :"true"
     },
     {
+        "title" :"Zoom Clone",
+        "backgroundImg" :"/assets/projects/zoom.png",
+        "projectURL": "https://zoom-clone-johan.vercel.app",
+        "code": "https://github.com/JohanLeon0914/zoom-clone",
+        "overview" :"I developed a Zoom clone which has its basic functionalities, such as creating an instant meeting and scheduling meetings, several users can also join the meetings and has options to manage the audio and video input and output devices for a meeting. I learned call and stream management thanks to the 'Stream' framework that made it easier for me to create all these streaming functionalities.",
+        "tecnologys" :"Nextjs, TailwindCSS, Stream",
+        "deploy" :"true"
+    },
+    {
         "title" :"Ecommerce Next14",
         "backgroundImg" :"/assets/projects/ecommerce.jpg",
         "projectURL": "https://ecommerce-next14.vercel.app",
